[package]
name = "cloc-rs"
version = "0.1.0"
edition = "2024"
description = "A simple CLI to count lines of code by extension with empty/import filtering"
license = "MIT"
keywords = ["cloc", "cli", "lines-of-code", "count"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
