[package]
name = "cloc-rs"
version = "0.4.3"
edition = "2024"
description = "A simple CLI to count lines of code by extension with empty/import filtering"
license = "MIT"
keywords = ["cloc", "cli", "lines-of-code", "count"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5.15"
ignore = "0.4.25"
prettytable-rs = "0.10.0"
rayon = "1.11.0"
